# HelloCMake

Docs/: README.md
Examples/: Examples.sln
Examples/Examples.Moudle1/: Examples.Moudle1.csproj  Program.cs
Examples/Examples.Moudle1/Properties/: AssemblyInfo.cs
Examples/Examples.Moudle2/: Examples.Moudle2.csproj  Program.cs
Examples/Examples.Moudle2/Properties/: AssemblyInfo.cs
Src/: CMakeLists.txt  KeLi.HelloCMake.sln
Src/KeLi.HelloCMake.Business/: CMakeLists.txt  KeLi.HelloCMake.Business.csproj  Product.cs
Src/KeLi.HelloCMake.Business/Properties/: AssemblyInfo.cs
Src/KeLi.HelloCMake.ConsoleApp/: CMakeLists.txt  KeLi.HelloCMake.ConsoleApp.csproj  Program.cs
Src/KeLi.HelloCMake.ConsoleApp/Properties/: AssemblyInfo.cs
Src/KeLi.HelloCMake.Utils/: CMakeLists.txt  KeLi.HelloCMake.Utils.csproj  ProductUtil.cs  packages.config
Src/KeLi.HelloCMake.Utils/Properties/: AssemblyInfo.cs
Src/KeLi.HelloCMake.WinFormApp/: CMakeLists.txt  KeLi.HelloCMake.WinFormApp.csproj  MainForm.Designer.cs  MainForm.cs  Program.cs
Src/KeLi.HelloCMake.WinFormApp/Data/: 001
Src/KeLi.HelloCMake.WinFormApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
Src/KeLi.HelloCMake.WpfApp/: App.xaml  App.xaml.cs  CMakeLists.txt  KeLi.HelloCMake.WpfApp.csproj  MainWnd.xaml  MainWnd.xaml.cs
Src/KeLi.HelloCMake.WpfApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
